<resources>
    <string name="app_name">Zonal Desk</string>
    <string name="facebook_app_id">1794298467328493</string>
    <string name="fb_login_protocol_scheme">fb1794298467328493</string>
    <string name="logout">Logout</string>
    <string name="not_a_member_yet_sign_up_here">Not a Member yet Sign Up here</string>
    <string name="email_id">Email-ID</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="email_sign_in">Sign In</string>
    <string name="phone_sign_in">phoneLogin</string>
</resources>
